fix text align

--- a/static/css/style.comp.css
+++ b/static/css/style.comp.css
@@ -410,9 +410,6 @@ section {
     margin-bottom: 4rem;
     text-align: justify;
     text-align-last: left; }
-    @media only screen and (max-width: 53.125em) {
-      .intro__paragraph {
-        text-align-last: left; } }
     @media only screen and (max-width: 37.5em) {
       .intro__paragraph {
         font-size: 2rem; } }
@@ -462,10 +459,9 @@ section {
   .services-developers__paragraph {
     font-size: 1.7rem;
     font-style: italic;
-    margin-bottom: 4rem; }
-    @media only screen and (max-width: 53.125em) {
-      .services-developers__paragraph {
-        text-align: left; } }
+    margin-bottom: 4rem;
+    text-align: justify;
+    text-align-last: left; }
     @media only screen and (max-width: 37.5em) {
       .services-developers__paragraph {
         font-size: 2rem; } }
@@ -518,9 +514,6 @@ section {
     text-align: justify;
     text-align-last: left;
     margin-bottom: 4rem; }
-    @media only screen and (max-width: 53.125em) {
-      .services-tenants__paragraph {
-        text-align: left; } }
     @media only screen and (max-width: 37.5em) {
       .services-tenants__paragraph {
         font-size: 2rem; } }
