--- a/static/sass/_intro.scss
+++ b/static/sass/_intro.scss
@@ -42,10 +42,6 @@
         text-align: justify;
         text-align-last: left;
 
-        @media only screen and (max-width: 53.125em) {
-            text-align-last: left;
-        }
-
         @media only screen and (max-width: $bp-small) {
             font-size: 2rem;
         }
