--- a/static/sass/_services_developers.scss
+++ b/static/sass/_services_developers.scss
@@ -55,10 +55,8 @@
         font-size: $paragraph-font-size;
         font-style: italic;
         margin-bottom: 4rem;
-
-        @media only screen and (max-width: 53.125em) {
-            text-align: left;
-        }
+        text-align: justify;
+        text-align-last: left;
 
         @media only screen and (max-width: $bp-small) {
             font-size: 2rem;
