--- a/static/sass/_services_tenants.scss
+++ b/static/sass/_services_tenants.scss
@@ -58,10 +58,6 @@
         text-align-last: left;
         margin-bottom: 4rem;
 
-        @media only screen and (max-width: 53.125em) {
-            text-align: left;
-        }
-
         @media only screen and (max-width: $bp-small) {
             font-size: 2rem;
         }
